<resources>
    <string name="app_name">TMDB</string>

    <string name="menu_home">Home</string>
    <string name="menu_watchlist">Watchlist</string>
    <string name="menu_favourites">Favourites</string>

    <string name="overview_header">Overview</string>
    <string name="release_date">Released</string>
    <string name="genres">Genres</string>
    <string name="original_title">Original title</string>
    <string name="original_language">Original language</string>
    <string name="spoken_languages">Spoken languages</string>
    <string name="not_available">Not available</string>
    
    <string name="favourite_empty_state">There\'s no favorite movie yet. Go to movie details to set it.</string>
    <string name="watchlist_empty_state">There\'s no movie you want to watch yet. Go to movie details to set it.</string>

    <string name="something_happen">Ups! Something went wrong</string>
</resources>
